fix bg on small screens

--- a/promises/style.css
+++ b/promises/style.css
@@ -140,6 +140,7 @@ header p {
   margin: 0;
   padding: 0;
   overflow-x: auto;
+  background-color: #282c34;
 }
 
 .code-example code {
